[bug] fix issue with long image filenames not wrapping

--- a/public/css/components/image.scss
+++ b/public/css/components/image.scss
@@ -19,3 +19,7 @@
 .image-card-close-button:hover {
   cursor: pointer;
 }
+
+.img-file-name {
+  word-break: break-word;
+}
