--- a/public/css/layout/body.scss
+++ b/public/css/layout/body.scss
@@ -13,6 +13,7 @@ html, body, #app {
   @extend .max-width;
   @extend .max-height;
   padding: 5px;
+  min-width: 350px;
 }
 
 body {
@@ -21,7 +22,7 @@ body {
 
 @media only screen and (min-width: 640px) {
   #app {
-    width: 50%;
+    width: 60%;
     margin: auto;
   }
 }
